Inheriting whitespace on `code` fixes this issue (#364)

--- a/src/SmartComponents/Inventory/applications/advisor/advisor.scss
+++ b/src/SmartComponents/Inventory/applications/advisor/advisor.scss
@@ -50,7 +50,7 @@
         background-color: #f5f5f5;
         border: 1px solid #ccc;
         border-radius: 4px;
-        code { white-space: normal; }
+        code { white-space: inherit; }
     }
 
     ol {
